--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
 
@@ -18,7 +20,10 @@
   <body>
     <header>
       <h1>Weather App</h1>
-      <nav>
+    </header>
+
+    <main>
+      <div class="search-bar">
         <input
           type="search"
           name="search"
@@ -26,16 +31,21 @@
           class="search"
         />
         <input type="submit" value="Search" class="search-btn" />
-      </nav>
-    </header>
-
-    <main>
-      <h2 class="temp">Temperature: </h2>
-      <h5 class="max-temp">Maximum Temperature:</h5>
-      <h5 class="min-temp">Minimum Temperature:</h5>
-      <h3 class="feels-like">Feels Like:</h3>
-      <h3 class="humidity">Humidity:</h3>
-      <h4 class="pressure">Pressure:</h4>
+      </div>
+      <div class="temperature-information">
+        <div class="temperature">
+          <h2 class="temp"></h2>
+          <div class="temperature-range">
+            <h3 class="max-temp">H:</h3>
+            <h3 class="min-temp">L:</h3>
+          </div>
+        </div>
+        <div class="other-information">
+          <h4 class="feels-like">Feels Like:</h4>
+          <h4 class="humidity">Humidity:</h4>
+          <h4 class="pressure">Pressure:</h4>
+        </div>
+      </div>
     </main>
   </body>
   <script src="app.js"></script>
