Add ability for user to enter location name to obtain weather information

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     </header>
 
     <main>
+      <h2 class="location-name">Enter a Location.</h2>
+
       <div class="search-bar">
         <input
           type="search"
@@ -34,16 +36,16 @@
       </div>
       <div class="temperature-information">
         <div class="temperature">
-          <h2 class="temp"></h2>
+          <h2 class="temp">0</h2>
           <div class="temperature-range">
-            <h3 class="max-temp">H:</h3>
-            <h3 class="min-temp">L:</h3>
+            <h3 class="max-temp">H: 0</h3>
+            <h3 class="min-temp">L: 0</h3>
           </div>
         </div>
         <div class="other-information">
-          <h4 class="feels-like">Feels Like:</h4>
-          <h4 class="humidity">Humidity:</h4>
-          <h4 class="pressure">Pressure:</h4>
+          <h4 class="feels-like">Feels Like: 0</h4>
+          <h4 class="humidity">Humidity: 0</h4>
+          <h4 class="pressure">Pressure: 0</h4>
         </div>
       </div>
     </main>
