--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <main>
-      <h2 class="location-name">Enter a Location.</h2>
+      <h2 class="location-name">Enter a Location!</h2>
 
       <div class="search-bar">
         <input
@@ -47,6 +47,10 @@
           <h4 class="humidity">Humidity: 0</h4>
           <h4 class="pressure">Pressure: 0</h4>
         </div>
+      </div>
+      <div class="temperature-units">
+        <button class="celsius">C</button>
+        <button class="fahrenheit">F</button>
       </div>
     </main>
   </body>
